[package]
name = "todo-actix-config"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Use 'ini' feature to parse the .env file format
config = { version = "0.15.19", features = ["ini"] }
dotenv = "0.15"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version = "0.14.1", features = ["serde", "rt_tokio_1"] }
tokio-postgres = "0.7.15"